public/css/basic.css
body {
  padding-top: 0px;
  padding-bottom: 40px;
  background-color: #eee;
}

p {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
  text-align: center;
  font-size: 16px;
}

h1, h2 {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
  text-align: center;
}

h3 {
  max-width: 330px;
  padding: 1px;
  margin: 0 auto;
  text-align: center;
  font-size: 18px;
}

.form-signin {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
}
.form-signin .form-signin-heading,
.form-signin .checkbox {
  margin-bottom: 10px;
}
.form-signin .checkbox {
  font-weight: normal;
}
.form-signin .form-control {
  position: relative;
  height: auto;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  padding: 10px;
  font-size: 16px;
}
.form-signin .form-control:focus {
  z-index: 2;
}

.form-signin input[type="text"] {
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  text-align: center;
}

::-webkit-input-placeholder {
  text-align: center;
}

.hangman {
  margin: 0;
  padding: 0;
  background: #FF0000;
  height: 80vh;
  width: 80%;
  margin: auto;
  overflow: auto;
  position: relative;
}

.base {
  background: #A4CA39;
  position: absolute;
  width: 30%;
  height: 1%;
  top: 95%;
  left: 65%;
}

.stand_top {
  background: #A4CA39;
  position: absolute;
  width: 20%;
  height: 1%;
  left: 70%;
  top: 35%;
}

.stand {
  background: #A4CA39;
  position: absolute;
  width: 1%;
  height: 60%;
  left: 90%;
  top: 35%;
}

.noose {
  background: #A4CA39;
  position: absolute;
  width: 1%;
  height: 5%;
  left: 70%;
  top: 35%;
}

.gridForm{
  width: 400px;
  margin: 50px auto;
}

.floatedForm{
  text-align: center;
}

.wrapper{
  width: 400px;
  height: 400px;
  margin: 10px auto;
}

.grid{
  background-color: black;
  color: purple;
  float: left;
}

.bigwrapper{
  background-color: #F2F2F2;
  width: 100%;
  height: 100%;
}

.boxform input[type="text"] {
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  text-align: center;
  width: 50px;
}

.btn-group button {
  width: 100px;
}

